--- a/frontend/src/themes/mainStyle.scss
+++ b/frontend/src/themes/mainStyle.scss
@@ -18,29 +18,21 @@
   --gradient-third-color: #81e9f6;
   --gradient-fourth-color: #fdc17e;
 
-  --gradient-first: linear-gradient(
-    171.13deg,
-    var(--gradient-first-color) 18.23%,
-    var(--gradient-second-color) 71.97%
-  );
+  --gradient-first: linear-gradient(171.13deg,
+      var(--gradient-first-color) 18.23%,
+      var(--gradient-second-color) 71.97%);
 
-  --gradient-second: linear-gradient(
-    -90deg,
-    var(--gradient-first-color) 18.23%,
-    var(--gradient-second-color) 71.97%
-  );
+  --gradient-second: linear-gradient(-90deg,
+      var(--gradient-first-color) 18.23%,
+      var(--gradient-second-color) 71.97%);
 
-  --gradient-first-inverted: linear-gradient(
-    -171.13deg,
-    var(--gradient-first-color) 18.23%,
-    var(--gradient-second-color) 71.97%
-  );
+  --gradient-first-inverted: linear-gradient(-171.13deg,
+      var(--gradient-first-color) 18.23%,
+      var(--gradient-second-color) 71.97%);
 
-  --gradient-dragging-area: linear-gradient(
-    180deg,
-    rgba(28, 27, 26, 0.79) 0%,
-    #1c1b1a 100%
-  );
+  --gradient-dragging-area: linear-gradient(180deg,
+      rgba(28, 27, 26, 0.79) 0%,
+      #1c1b1a 100%);
 
   --header-height: 80px;
   --footer-height: 60px;
@@ -57,11 +49,13 @@ html,
 body {
   background-color: var(--primary-color);
   margin: 0;
+
   * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
   }
+
   color: var(--primary-color-contrast);
 }
 
@@ -123,6 +117,7 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
 // =========================================================================================================
 // =============================================== ELEMENTS ================================================
 // =========================================================================================================
@@ -211,6 +206,7 @@ button {
   height: 300px;
   max-width: 300px;
   max-width: 300px;
+
   img {
     width: 100%;
     height: 100%;
@@ -239,9 +235,11 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   cursor: copy;
+
   .dragging-area-content {
     width: 60px;
     height: 60px;
+
     img {
       display: block !important;
       width: 100%;
@@ -249,6 +247,7 @@ button {
       object-fit: contain;
     }
   }
+
   img {
     display: none;
   }
@@ -304,6 +303,7 @@ button {
     margin-right: 10px;
     height: 50px;
   }
+
   .nav-brand {
     width: 60px;
     width: auto;
@@ -331,7 +331,8 @@ input[type="range"].form-range::-moz-range-thumb {
 }
 
 input[type="range"].form-range::-ms-thumb {
-  background-color: var(--secondary-color); /* Cambia il colore desiderato */
+  background-color: var(--secondary-color);
+  /* Cambia il colore desiderato */
   margin-top: -6px;
 }
 
@@ -340,11 +341,13 @@ input[type="range"].form-range::-webkit-slider-runnable-track {
 }
 
 input[type="range"].form-range::-moz-range-track {
-  height: 2px; /* Altezza desiderata per la linea */
+  height: 2px;
+  /* Altezza desiderata per la linea */
 }
 
 input[type="range"].form-range::-ms-track {
-  height: 2px; /* Altezza desiderata per la linea */
+  height: 2px;
+  /* Altezza desiderata per la linea */
 }
 
 .loader {
@@ -361,10 +364,13 @@ input[type="range"].form-range::-ms-track {
   height: 60vh;
   border-radius: 500px;
   background: var(--primary-color);
+
   .loader-content {
     width: 100%;
+
     .visual {
       width: 100%;
+
       img {
         width: 100%;
       }
@@ -380,6 +386,7 @@ input[type="range"].form-range::-ms-track {
     border-radius: 44px;
     z-index: 2;
   }
+
   .preview-image-borders {
     width: 302px;
     height: 302px;
@@ -401,6 +408,7 @@ input[type="range"].form-range::-ms-track {
 a {
   text-decoration: none;
   color: inherit;
+
   &:hover {
     color: inherit;
   }
@@ -458,14 +466,17 @@ p {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
 }
+
 @keyframes fade-out {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -481,24 +492,29 @@ p {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+
   50% {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
+
   100% {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
+
 @keyframes pulsate-fwd {
   0% {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+
   50% {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
   }
+
   100% {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -507,27 +523,42 @@ p {
 
 @keyframes neon {
   0% {
-    stroke: #fff; /* Colore del tubo al neon spento */
-    stroke-width: 1; /* Spessore del tubo al neon spento */
-    opacity: 0.5; /* Opacità del tubo al neon spento */
-    filter: blur(0.3px); /* Effetto di sfocatura del tubo al neon spento */
+    stroke: #fff;
+    /* Colore del tubo al neon spento */
+    stroke-width: 1;
+    /* Spessore del tubo al neon spento */
+    opacity: 0.5;
+    /* Opacità del tubo al neon spento */
+    filter: blur(0.3px);
+    /* Effetto di sfocatura del tubo al neon spento */
   }
+
   50% {
-    stroke: #00e1ff; /* Colore del tubo al neon acceso */
-    stroke-width: 3; /* Spessore del tubo al neon acceso */
-    opacity: 1; /* Opacità del tubo al neon acceso */
-    filter: blur(1px); /* Effetto di sfocatura del tubo al neon acceso */
+    stroke: #00e1ff;
+    /* Colore del tubo al neon acceso */
+    stroke-width: 3;
+    /* Spessore del tubo al neon acceso */
+    opacity: 1;
+    /* Opacità del tubo al neon acceso */
+    filter: blur(1px);
+    /* Effetto di sfocatura del tubo al neon acceso */
   }
+
   100% {
-    stroke: #fff; /* Colore del tubo al neon spento */
-    stroke-width: 1; /* Spessore del tubo al neon spento */
-    opacity: 0.5; /* Opacità del tubo al neon spento */
-    filter: blur(0.3px); /* Effetto di sfocatura del tubo al neon spento */
+    stroke: #fff;
+    /* Colore del tubo al neon spento */
+    stroke-width: 1;
+    /* Spessore del tubo al neon spento */
+    opacity: 0.5;
+    /* Opacità del tubo al neon spento */
+    filter: blur(0.3px);
+    /* Effetto di sfocatura del tubo al neon spento */
   }
 }
 
 .neon-svg {
-  animation: neon 0.5s infinite alternate; /* Applica l'animazione "neon" al logo con un ciclo infinito */
+  animation: neon 0.5s infinite alternate;
+  /* Applica l'animazione "neon" al logo con un ciclo infinito */
 }
 
 .rotate-center {
@@ -541,16 +572,19 @@ p {
     -webkit-transform: rotate(0);
     transform: rotate(0);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
+
 @keyframes rotate-center {
   0% {
     -webkit-transform: rotate(0);
     transform: rotate(0);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -576,9 +610,11 @@ p {
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
@@ -588,9 +624,11 @@ p {
   0% {
     background-position: 0% 50%;
   }
+
   50% {
     background-position: 100% 50%;
   }
+
   100% {
     background-position: 0% 50%;
   }
@@ -607,18 +645,21 @@ p {
     transform: translateZ(-80px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
     opacity: 1;
   }
 }
+
 @keyframes fade-in-fwd {
   0% {
     -webkit-transform: translateZ(-80px);
     transform: translateZ(-80px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
@@ -650,50 +691,79 @@ p {
   margin-bottom: 10px;
 }
 
-.settings_container {
-  background: #313131;
-  border-radius: 2rem;
-  box-shadow: 1px 4px 18px rgba(0, 0, 0, .2);
-  justify-content: center;
-  padding: 1.5rem;
-  opacity: 0;
-  animation: fade-in .13s ease-in-out forwards;
-  button {
-    width: 70%;
-    height: 3rem;
+.settings {
+  position: relative;
+  display: flex;
 
-    span {
-      padding: 0;
-      display: grid;
-      place-content: center;
-      place-items: center;
-    }
+  .fa-gear {
+    margin: 2rem 4rem -1rem auto
   }
 
-  .method_switch {
-    background: #1a1a1a;
-    width: 115px;
-    border-radius: 99px;
-    box-shadow: 1px 3px 18px rgba(0, 0, 0, .12);
-    position: relative;
-    height: 2rem;
-    margin: auto;
+  .settings_container {
+    position: absolute;
+    right: -8rem;
+    top: 3.5rem;
+    background: #313131;
+    border-radius: 2rem;
+    box-shadow: 1px 4px 18px rgba(0, 0, 0, .2);
+    justify-content: center;
+    padding: 1.5rem;
+    opacity: 0;
+    animation: fade-in .13s ease-in-out forwards;
+    z-index: 999;
 
-    div {
-      background: white;
-      width: 60%;
-      height: 2rem;
-      border-radius: 99px;
-      box-shadow: 1px 3px 18px rgba(0, 0, 0, .12);
-      position: absolute;
-      transition: all .13s ease-in-out;
-      right: 45px;
-      cursor: pointer;
+    button {
+      width: 70%;
+      height: 3rem;
+
+      span {
+        padding: 0;
+        display: grid;
+        place-content: center;
+        place-items: center;
+      }
     }
 
-    div.right {
-      position: absolute;
-      right: 0;
+    .method_switch {
+      background: #1a1a1a;
+      width: 115px;
+      border-radius: 99px;
+      box-shadow: 1px 3px 18px rgba(0, 0, 0, .12);
+      position: relative;
+      height: 2rem;
+      margin: auto;
+
+      &.upload_first::after {
+        content: 'upload a photo first';
+        color: white;
+        font-size: 14px;
+        position: absolute;
+        background: #313131e3;
+        cursor: not-allowed;
+        top: -2rem;
+        left: -2.6rem;
+        right: -2.6rem;
+        bottom: -2rem;
+        display: grid;
+        place-content: center center;
+      }
+
+      div {
+        background: white;
+        width: 60%;
+        height: 2rem;
+        border-radius: 99px;
+        box-shadow: 1px 3px 18px rgba(0, 0, 0, .12);
+        position: absolute;
+        transition: all .13s ease-in-out;
+        right: 45px;
+        cursor: pointer;
+      }
+
+      div.right {
+        position: absolute;
+        right: 0;
+      }
     }
   }
 
@@ -709,8 +779,9 @@ p {
   position: absolute;
   top: 5%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   z-index: 999999;
+
   svg:nth-child(1) {
     position: absolute;
     top: 1.2rem;
@@ -718,8 +789,16 @@ p {
     scale: 1.5;
     cursor: pointer;
   }
-  svg:nth-child(2) {scale:2}
-  p {margin-top: 1rem; font-size: 18px;}
+
+  svg:nth-child(2) {
+    scale: 2
+  }
+
+  p {
+    margin-top: 1rem;
+    font-size: 18px;
+  }
+
   animation: fade-in .13s ease-in-out;
 }
 
