--- a/frontend/src/themes/responsive.scss
+++ b/frontend/src/themes/responsive.scss
@@ -1,9 +1,11 @@
 @media screen and (max-width: 767px) {
+
   body,
   html {
     font-size: 12px;
     overflow-x: hidden !important;
   }
+
   .bulb-primary {
     width: 100%;
     height: 60%;
@@ -21,24 +23,29 @@
       object-fit: contain;
     }
   }
+
   .dragging-area {
     width: 200px;
     height: 200px;
     border-radius: 22px;
+
     img {
       display: none;
     }
   }
+
   .gradient-bulb {
     background-image: url("../assets/mobile_bg.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
   }
+
   .loader {
     width: 300px;
     height: 300px;
   }
+
   input[type="range"].form-range::-webkit-slider-thumb {
     scale: 1.1;
   }
@@ -47,20 +54,26 @@
     img {
       border-radius: 22px;
     }
+
     .preview-image-borders {
       width: 202px;
       height: 202px;
       border-radius: 22px;
     }
   }
-  
+
   .settings_container {
     margin-left: -8rem;
-    margin-top: 1rem;
+    margin-top: 0;
     z-index: 999;
+    right: -3rem !important;
   }
 
   .error_modal {
     top: 25%;
+  }
+
+  .fa-gear {
+    margin-right: 3rem!important;
   }
 }
